--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="edu.umich.gopalkri.wakeup"
       android:versionCode="1"
       android:versionName="1.0">
+
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Home"
                   android:label="@string/app_name">
@@ -12,5 +13,9 @@
             </intent-filter>
         </activity>
     </application>
+
     <uses-sdk android:minSdkVersion="2" />
-</manifest> 
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+</manifest>
