--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="edu.umich.gopalkri.wakeup"
-      android:versionCode="1"
-      android:versionName="1.0">
+	package="edu.umich.gopalkri.wakeup" android:versionCode="1"
+	android:versionName="1.0">
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".Home"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-    </application>
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+		<activity android:name=".Home" android:label="@string/app_name">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
 
-    <uses-sdk android:minSdkVersion="2" />
+		<activity android:name=".Help" android:label="@string/app_name" />
 
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET" />
+	</application>
+
+	<uses-sdk android:minSdkVersion="2" />
+
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	<uses-permission android:name="android.permission.INTERNET" />
 </manifest>
