--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,8 @@
 
 		<activity android:name=".Help" android:label="@string/app_name" />
 
+		<activity android:name=".EditAlarm" android:label="@string/app_name" />
+
 	</application>
 
 	<uses-sdk android:minSdkVersion="2" />
