--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,7 @@
 	android:versionName="1.0">
 
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
+
 		<activity android:name=".Home" android:label="@string/app_name">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
@@ -15,9 +16,13 @@
 
 		<activity android:name=".EditAlarm" android:label="@string/app_name" />
 
+		<activity android:name=".SelectDestination" android:label="@string/app_name" />
+
 	</application>
 
 	<uses-sdk android:minSdkVersion="2" />
+
+	<uses-library android:name="com.google.android.maps" />
 
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
