--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,10 +13,9 @@
 		</activity>
 
 		<activity android:name=".Help" android:label="@string/app_name" />
-
 		<activity android:name=".EditAlarm" android:label="@string/app_name" />
-
 		<activity android:name=".SelectDestination" android:label="@string/app_name" />
+		<activity android:name=".ManageAlarms" android:label="@string/app_name" />
 
         <uses-library android:name="com.google.android.maps" />
 	</application>
