--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,11 +11,12 @@
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 		</activity>
-
 		<activity android:name=".Help" android:label="@string/app_name" />
 		<activity android:name=".EditAlarm" android:label="@string/app_name" />
 		<activity android:name=".SelectDestination" android:label="@string/app_name" />
 		<activity android:name=".ManageAlarms" android:label="@string/app_name" />
+
+		<service android:name=".GPSService" android:enabled="true" />
 
         <uses-library android:name="com.google.android.maps" />
 	</application>
