--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,7 @@
 		<activity android:name=".SelectDestination" android:label="@string/app_name" />
 		<activity android:name=".ManageAlarms" android:label="@string/app_name" />
 		<activity android:name=".ReceiveNotification" android:label="@string/app_name" />
+		<activity android:name=".EditSettings" android:label="@string/app_name" />
 
 		<service android:name=".GPSService" android:enabled="true" />
 
